{{$NEXT}}

0.000036  2025-03-26 22:56:11-07:00 America/Los_Angeles

    - Support MySQL community server (MySQLCom)
    - Default to DBD::MariaDB for all mysql variants

0.000035  2024-07-10 08:25:37-07:00 America/Los_Angeles

    - Documentation Updates

0.000034  2024-06-12 17:11:24-07:00 America/Los_Angeles

    - MAke watcher use exec

0.000033  2024-05-13 11:13:04-07:00 America/Los_Angeles

    - Remove Carp::Always from MariaDB test

0.000032  2024-05-07 09:12:13-07:00 America/Los_Angeles

    - Docs fixes

0.000031  2024-05-06 15:53:42-07:00 America/Los_Angeles

    - Fix silencing of watchers

0.000030  2024-05-06 14:58:26-07:00 America/Los_Angeles

    - Cleanup the db-watcher code
    - Split MySQL into Percona and MariaDB

0.000029  2024-04-28 09:58:52+01:00 Europe/Lisbon

    - Add QDB_TMPDIR env var

0.000028  2024-04-25 13:00:04+01:00 Europe/Lisbon

    - Fix mariadb warning

0.000027  2024-04-25 12:24:25+01:00 Europe/Lisbon

    - Fix doc issue

0.000026  2024-04-16 15:04:26-07:00 America/Los_Angeles

    - Use MariaDB binaries when available
    - Silence mariadb complaints about using mysql binaries

0.000025  2024-04-16 14:34:21-07:00 America/Los_Angeles

    - Fix test error when DBD::mysql is not installed

0.000024  2024-02-07 17:19:03-08:00 America/Los_Angeles

    - Add QDB_MYSQL_SSL_FIPS env var

0.000023  2022-08-23 14:02:40-07:00 America/Los_Angeles

    - Allow an instance dir for pools

0.000022  2022-07-08 15:44:44-07:00 America/Los_Angeles

    - Better support for percona 5.7
    - Do not modify config reference that is passed in, make a copy

0.000021  2021-01-19 14:55:27-08:00 America/Los_Angeles

    - For pools, make sure cache db is stopped before marking it as ready
    - Move ready file outside the directory so it is not copied with the dir (ooops)
    - Add ability to show pool diag without showing all sql-server output

0.000020  2020-12-01 15:35:36-08:00 America/Los_Angeles
